--- a/index.html
+++ b/index.html
@@ -123,12 +123,17 @@
         <div class="row align-items-stretch">
 
             <!-- Bagian Gambar -->
-            <div class="col-lg-6 col-12 d-flex">
-                <img src="images/pkl/WhatsApp Image 2025-07-31 at 8.14.14 PM.jpeg" 
-                     class="about-image img-fluid rounded shadow" 
-                     alt=""
-                     style="width: 100%; height: 100%; max-height: 400px; object-fit: cover; border-radius: 15px;">
-            </div>
+            <div class="col-lg-6 col-12 d-flex position-relative justify-content-center">
+            <!-- Blob background -->
+            <img src="images/magicpattern-blob-1754117946081.png" class="purple-blob" alt="Blob Design">
+
+            <!-- Main image -->
+            <img src="images/pkl/WhatsApp Image 2025-07-30 at 11.00.57 PM.jpeg" 
+                class="about-image img-fluid shadow" 
+                alt="">
+        </div>
+
+
 
             <!-- Bagian Teks -->
             <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex">
@@ -136,7 +141,7 @@
 
                     <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
                         <h2 class="text-white me-4 mb-0">About Me</h2>
-                        <img src="images/pkl/WhatsApp Image 2025-07-30 at 11.00.57 PM.jpeg" 
+                        <img src="images/giphy_5.gif" 
                              class="avatar-image img-fluid rounded-circle" 
                              style="width: 60px; height: 60px; object-fit: cover;" alt="">
                     </div>
@@ -155,12 +160,12 @@
     </div>
 </section>
 
-           <section class="container my-5 m-3 " id="dudika">
+           <section class="container my-2 " id="dudika">
             <div class="row align-items-center">
                 <!-- Bagian Logo -->
                 <div class="col-md-4 text-center">
                 <img src="images/pkl/WhatsApp Image 2025-07-31 at 8.14.14 PM.jpeg" alt="Logo Perusahaan" 
-                    class="img-fluid rounded-circle border shadow" 
+                    class="img-fluid rounded-circle border shadow mb-5" 
                     style="width: 200px; height: 200px; object-fit: cover;">
                 </div>
                 
